[package]
name = "ruler-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
pex-trie = "0.0.1"
ucd-trie = "0.1.5"
#graph-types = "0.0.4"
#adjacency-list = { version = "0.0.1" }

[dependencies.pex]
version = "0.0.8"
features = ["ucd-trie"]

[dependencies.ruler-types]
version = "0.0.*"
path = "../ruler-types"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
